<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    	android:background="@android:color/background_dark" >
        
    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    	<TableLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:stretchColumns="0,1,2" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView_mpz_detail_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textview_spz_code"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true"  
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView_mpz_detail_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textview_spz_code_meaning"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/code_meaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="false"  
                android:textColor="#ffffff"
                android:textStyle="bold"
				android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView_mpz_detail_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textview_spz_region"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="5dp"            
                android:singleLine="false"  
                android:textColor="#ffffff"
                android:textStyle="bold"
				android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView_mpz_detail_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textview_spz_wiki_link"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/wiki_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"    
                android:singleLine="false"
                android:linksClickable="true"
				android:autoLink="web"
                android:textColor="#ffffff"
                android:textStyle="bold"
				android:layout_weight="1" />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView_mpz_detail_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/textview_spz_example"
                android:textColor="#ffffff" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/flag_ico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#999"
		android:padding="1dp"
		android:adjustViewBounds = "true"
        android:src="@drawable/flag_icon" />

	</LinearLayout>
</ScrollView>