<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:scrollbars="vertical" 
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent"
	android:background="@android:color/background_dark">
     
<TableLayout
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
        <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

            <ImageButton
                android:id="@+id/imageButton_cz"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                android:src="@drawable/cz" />

            <TextView
                android:id="@+id/textView2"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cr"
                android:textSize="8pt"
                android:textColor="#ffffff" />

    </TableRow>
 
    <!-- edittext span 2 column -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
            

            <ImageButton
                android:id="@+id/imageButton_pl"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                android:src="@drawable/pl" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pl"
                android:textSize="8pt"
                android:textColor="#ffffff" />

    </TableRow>
 
    <!-- edittext span 2 column -->
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

            <ImageButton
                android:id="@+id/imageButton_sk"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                android:src="@drawable/sk" />

            <TextView
                android:id="@+id/textView1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sk"
                android:textSize="8pt"
                android:textColor="#ffffff" />
   </TableRow>

</TableLayout>

</ScrollView>